[package]
name = "diesel-join-testcase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
diesel = { version = "2", features = ["sqlite", "r2d2"] }
